@@ -32,6 +32,7 @@ classes = Split("""
    HUD
    IntroState
    Jukebox
+   LoadState
    MenuState
    ModelManager
    OpenSGSceneViewer
